crates/gx/tests/snapshots/clone_no_arg.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 1
---- stdout ----

---- stderr ----
Usage: gx clone <repo>
