crates/gx/tests/snapshots/clone_too_many_args.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 1
---- stdout ----

---- stderr ----
Usage: gx clone <repo> [dest]
