crates/gx/tests/snapshots/doctor_powershell_missing_profile.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 0
---- stdout ----
runtime     ok    native
binary      warn  gx is not on PATH
config      warn  missing; defaults are in use (<HOME>/.config/gx/config.json)
projectDir  warn  missing: <HOME>/Projects/src
index       warn  missing; run gx rebuild (<HOME>/.config/gx/index.json)
shell       warn  integration not found in <HOME>/Documents/PowerShell/Microsoft.PowerShell_profile.ps1, <HOME>/Documents/WindowsPowerShell/Microsoft.PowerShell_profile.ps1, <HOME>/.config/powershell/Microsoft.PowerShell_profile.ps1; run gx shell-init
doctor: 5 warning(s); gx can still run

---- stderr ----
