crates/gx/tests/snapshots/help.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 0
---- stdout ----
gx v0.2.0 — git project manager

Usage:
  gx <name>                Jump to project
  gx clone <repo>          Clone and jump to repo
  gx open [name]           Open project in editor
  gx ls                    List indexed projects
  gx index                 Index new repos (additive scan)
  gx index <path>...       Add specific repo(s) to index
  gx rebuild               Rescan and rebuild index
  gx recent                List recently visited projects
  gx recent -n <N>         Show last N projects
  gx resume <name>         Jump to project with git context
  gx doctor                Verify installation health
  gx config                Show config
  gx config set <key> <v>  Set config value
  gx init                  Scaffold .claude/ agent config
  gx shell-init [shell]    Print shell integration code
  gx resolve <name>        Resolve project name to path
  gx resolve --list        List all project names

Worktrees (requires shell integration):
  gx <name> wt [args...]   Jump to project and run wt (worktrunk)

Planned (not yet implemented):
  gx fork <repo>           Fork repo on GitHub, clone, and jump
  gx fork <repo> --clone-only  Clone existing fork, set upstream
  gx sync                  Fetch upstream and integrate changes
  gx sync --rebase|--merge Override sync strategy
  gx sync --push           Push to origin after syncing

Options:
  gx open --editor <name>  Override editor for this invocation
  gx init --type <type>    Override project type detection
  gx init --force          Overwrite existing CLAUDE.md

---- stderr ----
