crates/gx/tests/snapshots/ls.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 0
---- stdout ----
alpha        /snapshot/projects/github.com/acme/alpha
beta         /snapshot/projects/github.com/acme/beta
gamma-utils  /snapshot/projects/github.com/widgets/gamma-utils

---- stderr ----
