crates/gx/tests/snapshots/ls_empty.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 0
---- stdout ----

---- stderr ----
No projects indexed. Clone a repo or run 'gx rebuild'.
