crates/gx/tests/snapshots/recent.snap
---
source: crates/gx/tests/snapshots.rs
---
exit: 0
---- stdout ----
gamma-utils  /snapshot/projects/github.com/widgets/gamma-utils  <TIME_AGO>
alpha        /snapshot/projects/github.com/acme/alpha  <TIME_AGO>
beta         /snapshot/projects/github.com/acme/beta  <TIME_AGO>

---- stderr ----
